# amortized-decision-making

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
bam/: actions.py  bam.py  costs.py  npe.py  posterior_estimator.py
bam/tasks/: __init__.py  bvep.py  linear_gaussian.py  lotka_volterra.py  sir.py  task.py  toy_example.py
bam/utils/: analysis.py  utils.py
loss_cal/: actions.py  bam.py  costs.py  npe.py  predictor.py
loss_cal/tasks/: __init__.py  bvep.py  linear_gaussian.py  lotka_volterra.py  sir.py  task.py  toy_example.py
loss_cal/utils/: .matplotlibrc  analysis.py  plot.py  utils.py
loss_calibration/: .matplotlibrc  actions.py  active_learning.py  classifier.py  classifier_continuous.py  kl_div.py  linear_gaussian.py  loss.py  lotka_volterra.py  npe.py  plot.py  sampling.py  sir.py  toy_example.py  utils.py
notebooks/: power_plant.ipynb
paper/fig2/: figure2.ipynb
scripts/: active_learning.ipynb  active_learning_lv.ipynb  active_learning_toy.ipynb  active_learning_toy_simple.ipynb  classifier.ipynb  classifier_scalar.ipynb  compute_npe_predictions.py  continous_toy.ipynb  continous_toy_binary_action.ipynb  continous_toy_cont_action.ipynb  evaluate_clf.ipynb  figures_classifier.ipynb  generate_data.py  generate_plots.py  get_posterior.py  kl_div_test.ipynb  linear_gaussian_example.ipynb  lotka_volterra.ipynb  lv_train_clf.py  run_al.py  sir.ipynb  testbed.ipynb  toy_example.ipynb  train_classifier.py  train_clf_sbibm.py  train_nn.py  train_nn_multiple_thresholds.py  train_npe.py  train_npe_sbibm.py  train_posterior_estimator.py
(+26 files in other folders)
